digital-ocean/digital-ocean-cloud-infra/platform/envoy-gateway/gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-shared-gateway
  namespace: gateway-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod

spec:
  gatewayClassName: envoy

  listeners:

    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.dev.aagnyasoft.com"
      allowedRoutes:
        namespaces:
          from: All

    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.dev.aagnyasoft.com"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: wildcard-tls-cert
      allowedRoutes:
        namespaces:
          from: All
